# Cognio

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  REPO_INFO.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api.md  examples.md  quickstart.md
examples/: basic_usage.py  curl_examples.sh  mcp_config.json
scripts/: backup.sh  bulk_import.py  migrate.py  setup.sh
src/: config.py  database.py  embeddings.py  main.py  memory.py  models.py  utils.py
tests/: __init__.py  test_api.py  test_embeddings.py  test_memory.py  test_utils.py
